--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <title>Annie N.</title>
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="education.html">Education</a></li>
-      <li><a href="experience.html">Experience</a></li>
-      <li><a href="goals.html">Career Goals</a></li>
-	  <li><a href="portfolio.html">Portfolio</a></li>
-    </ul>
-  </nav>
+	<nav>
+		<ul>
+			<li><a href="education.html">Education</a></li>
+			<li><a href="experience.html">Experience</a></li>
+			<li><a href="goals.html">Career Goals</a></li>
+			<li><a href="portfolio.html">Portfolio</a></li>
+		</ul>
+</nav>
 
   <h1>Annie N.</h1>
   <p>Hello! Welcome to my site. My name is Annie and I am a graduate student in GMU's English Literature master's degree program. I also work full time as an editor. </p>
 
-  <img src="annien.jpg" alt="Photo of Annie N.">
+  <img src="annien.jpg" alt="Photo of Annie N." width="300">
 
   <footer>
     <p>&copy; 2025 Annie N. All rights reserved.</p>
