--- a/education.html
+++ b/education.html
@@ -7,6 +7,7 @@
 <body>
 	<nav>
 		<ul>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="education.html">Education</a></li>
 			<li><a href="experience.html">Experience</a></li>
 			<li><a href="goals.html">Career Goals</a></li>
