--- a/goals.html
+++ b/goals.html
@@ -16,14 +16,16 @@
 </nav>
 
   <h1><b>CAREER GOALS</b></h1>
+	<br>
 	<section>
 	<h2>Short-Term Goals</h2>
 	<p>My current short-term goals are to continue to work full time as an editor for a government contractor while I finish my master's degree in English literature. Given that I am taking one class at a time, this may take me until summer or fall of 2027. In my current professional role, I aim to continue to polish and develop advanced editing techniques and skills while taking on challenging proposals and tasks. I hope to be growing professionally within my organization and taking on additional responsibilities.</p>
+	</section>
 	<br>
 	<section>
 	<h2>Long-Term Goals</h2>
 	<p>Long term, my vision is to continue to write so that one day, I can publish a book. I am currently workshopping ideas and have several ideas for children's and young adult books. I also began writing a novel in my Novel class that I took in the Spring of 2024 and hope to continue writing that as well.</p>
-
+	</section>
   <footer>
     <p>&copy; 2025 Annie N. All rights reserved.</p>
   </footer>
